--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@rollup/plugin-json": "^6.0.1",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-typescript": "^11.1.5",
+        "@rollup/plugin-url": "^8.0.2",
         "@rollup/pluginutils": "^5.1.4",
         "@types/minimatch": "^6.0.0",
         "@types/node": "^24.10.1",
